--- a/01. PARTIE LEGISLATIVE/Article L4316-11 - 23083023.md
+++ b/01. PARTIE LEGISLATIVE/Article L4316-11 - 23083023.md
@@ -1,18 +1,19 @@
 # Article L4316-11
 
 Les agents de Voies navigables de France mentionnés au premier alinéa de l'article L. 4316-10 peuvent procéder à des
-contrôles de l'assiette de la taxe due par les titulaires d'ouvrages hydrauliques. Ces opérations sont précédées de l'envoi
-d'un avis portant mention de la date et de l'objet du contrôle.
+contrôles de l'assiette de la taxe due par les titulaires d'ouvrages hydrauliques et les bénéficiaires ou occupants d'une
+installation irrégulière. Ces opérations sont précédées de l'envoi d'un avis portant mention de la date et de l'objet du
+contrôle.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°91-1385 du 31 décembre 1991 - art. 2 (Ab), alinéa 9, paragraphe IV
+	  - Loi n°2011-1977 du 28 décembre 2011 - art. 122
 
 	**Cite**:
 
-	  - Code des transports - art. L4316-10 (V)
+	  - Code des transports - art. L4316-10
 
 	**Cité par**:
 
