--- a/01. PARTIE LEGISLATIVE/Article L2132-13 - 23084484.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-13 - 23084484.md
@@ -19,16 +19,19 @@ ferroviaires.
 Ce droit est constaté et recouvré dans les mêmes délais et sous les mêmes garanties et sanctions que ceux applicables en
 matière de taxes sur le chiffre d'affaires.
 
+Le produit de ce droit est affecté à l'Autorité de régulation des activités ferroviaires dans la limite du plafond prévu au I
+de l'article 46 de la loi n° 2011-1977 du 28 décembre 2011 de finances pour 2012.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 21 (Ab), alinéas 5 à 10, paragraphe II
+	  - Loi n°2011-1977 du 28 décembre 2011 - art. 46 (MMN)
 
 	**Cite**:
 
-	  - Code des transports - art. L2122-1 (V)
-	  - Code des transports - art. L2221-6 (V)
+	  - Code des transports - art. L2122-1
+	  - Code des transports - art. L2221-6
 
 	**Cité par**:
 
