--- a/01. PARTIE LEGISLATIVE/Article L2221-6 - 23084212.md
+++ b/01. PARTIE LEGISLATIVE/Article L2221-6 - 23084212.md
@@ -2,9 +2,9 @@
 
 Les ressources de l'Etablissement public de sécurité ferroviaire sont constituées par : 
 
-1° Un droit de sécurité dû par les entreprises ferroviaires qui utilisent les réseaux mentionnés à l'article L. 2221-1. Le
-montant de ce droit est fixé par les ministres chargés des transports et du budget sur proposition du conseil
-d'administration de l'établissement public. Ce droit comprend, selon le cas : 
+1° Une fraction du produit d'un droit de sécurité dû par les entreprises ferroviaires qui utilisent les réseaux mentionnés à
+l'article L. 2221-1. Le montant de ce droit est fixé par les ministres chargés des transports et du budget sur proposition du
+conseil d'administration de l'établissement public. Ce droit comprend, selon le cas : 
 
 a) Un pourcentage du montant des redevances d'utilisation du réseau ferré national versées à Réseau ferré de France dans la
 limite du centième de ce montant et de 0,20 € par kilomètre parcouru ; 
@@ -27,11 +27,10 @@ l'article L. 2221-1, autres que celles visant à obtenir la qualité d'entrepris
 
 4° Les dons, legs, produits de cession et concours divers.
 
+La fraction prévue au 1° est plafonnée conformément au I de l'article 46 de la loi n° 2011-1977 du 28 décembre 2011 de
+finances pour 2012.
+
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°2006-10 du 5 janvier 2006 - art. 3 (Ab)
 
 	**Cité par**:
 
@@ -41,9 +40,13 @@ l'article L. 2221-1, autres que celles visant à obtenir la qualité d'entrepris
 	  - Code des transports - art. L1261-20 (V)
 	  - Code des transports - art. L2132-13 (Ab)
 
+	**Modifié par**:
+
+	  - Loi n°2011-1977 du 28 décembre 2011 - art. 46 (MMN)
+
 	**Cite**:
 
-	  - Code des transports - art. L2221-1 (V)
+	  - Code des transports - art. L2221-1
 
 	**Codifié par**:
 
