--- a/01. PARTIE LEGISLATIVE/Article L6342-1 - 23078085.md
+++ b/01. PARTIE LEGISLATIVE/Article L6342-1 - 23078085.md
@@ -1,25 +1,17 @@
 # Article L6342-1
 
-En vue d'assurer préventivement la sûreté des vols, l'entreprise ou l'organisme implanté à l'extérieur de la zone réservée
-doit, pour y accéder afin de livrer des biens et produits utilisés à bord des aéronefs, être agréé par l'autorité
-administrative en qualité d'établissement connu.L'entreprise ou l'établissement agréé en qualité d'établissement connu met en
-œuvre des mesures de sûreté appropriées pendant le conditionnement de ces biens et produits et préserve leur intégrité
-jusqu'à leur entrée en zone réservée.
+Pour la mise en œuvre dans leur domaine d'activité respectif des mesures de sûreté mentionnées à l'article L. 6341-2, les
+entreprises, personnes et organismes mentionnés au même article et appartenant à l'une des catégories fixées, en fonction des
+caractéristiques de leur activité, par le décret en Conseil d'Etat mentionné au second alinéa doivent être titulaires d'une
+autorisation administrative individuelle délivrée par l'autorité administrative compétente. 
 
-L'agrément peut être refusé ou retiré lorsque l'entreprise ou l'organisme ne se conforme pas aux obligations prévues par le
-présent article ou peut constituer, par ses méthodes de travail ou le comportement de ses dirigeants ou agents, un risque
-pour la sûreté. Il peut faire l'objet d'une suspension immédiate en cas d'urgence. 
-
-Les agents mentionnés à l'article L. 6372-1 ainsi que des organismes techniques habilités à cet effet vérifient que les
-entreprises ou organismes respectent les conditions de délivrance de l'agrément en qualité d'établissement connu. 
-
-Les conditions d'application du présent article sont fixées par décret en Conseil d'Etat.
+Un décret en Conseil d'Etat fixe les conditions d'application du présent article.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code de l'aviation civile - art. L213-4 (Ab), alinéas 1 à 3 et 5
+	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 3
 
 	**Cité par**:
 
@@ -28,10 +20,6 @@ Les conditions d'application du présent article sont fixées par décret en Con
 	  - Code de la sécurité intérieure - art. R114-4 (VD)
 	  - Code des transports - art. L6341-2 (V)
 	  - Code des transports - art. L6342-3 (V)
-
-	**Cite**:
-
-	  - Code des transports - art. L6372-1 (V)
 
 	**Codifié par**:
 
