--- a/01. PARTIE LEGISLATIVE/Article L6342-3 - 23078079.md
+++ b/01. PARTIE LEGISLATIVE/Article L6342-3 - 23078079.md
@@ -1,20 +1,27 @@
 # Article L6342-3
 
-L'accès aux lieux de préparation et de stockage des biens et produits mentionnés au premier alinéa de l'article L. 6342-1 est
-soumis à la possession d'une habilitation délivrée par le représentant de l'Etat dans le département et, à Paris, par le
-préfet de police.
+Les personnes ayant accès aux zones de sûreté à accès réglementé des aérodromes ou aux approvisionnements de bord sécurisés,
+ainsi que celles ayant accès au fret, aux colis postaux ou au courrier postal, sécurisés par un agent habilité ou ayant fait
+l'objet de contrôles de sûreté par un chargeur connu et identifiés comme devant être acheminés par voie aérienne, doivent
+être habilitées par l'autorité administrative compétente. 
 
-L'enquête administrative diligentée aux fins d'instruction de la demande d'habilitation peut donner lieu à consultation du
+La délivrance de cette habilitation est précédée d'une enquête administrative donnant lieu, le cas échéant, à consultation du
 bulletin n° 2 du casier judiciaire et des traitements automatisés de données à caractère personnel gérés par les services de
 police et de gendarmerie nationales relevant des dispositions de l'article 26 de la loi n° 78-17 du 6 janvier 1978 relative à
-l'informatique, aux fichiers et aux libertés, à l'exception des fichiers d'identification.
+l'informatique, aux fichiers et aux libertés, à l'exception des fichiers d'identification. 
+
+Un décret en Conseil d'Etat détermine les conditions d'application du présent article et notamment les personnes réputées
+détenir cette habilitation.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
 	  - Loi n°78-17 du 6 janvier 1978 - art. 26 (V)
-	  - Code des transports - art. L6342-1 (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 3
 
 	**Cité par**:
 
@@ -30,10 +37,6 @@ l'informatique, aux fichiers et aux libertés, à l'exception des fichiers d'ide
 	  - Code de l'aviation civile - art. R213-5-6 (V)
 	  - Code des transports - art. L6342-2 (V)
 	  - Code des transports - art. L6342-4 (V)
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L213-5 (Ab)
 
 	**Codifié par**:
 
