--- a/01. PARTIE LEGISLATIVE/Article L6763-4 - 23077410.md
+++ b/01. PARTIE LEGISLATIVE/Article L6763-4 - 23077410.md
@@ -1,16 +1,26 @@
 # Article L6763-4
 
-Pour l'application en Nouvelle-Calédonie de l'article L. 6332-2, les mots : " par l'article L. 2212-2 du code général des
-collectivités territoriales " sont remplacés par les mots : " par l'article L. 131-2 du code des communes de Nouvelle-
-Calédonie ".
+Pour l'application en Nouvelle-Calédonie des dispositions de l'article L. 6332-2, les mots : "dans le département" sont
+remplacés par les mots : "en Nouvelle-Calédonie", les mots : "par l'article L. 2212-2 du code général des collectivités
+territoriales" sont remplacés par les mots : "par l'article L. 131-2 du code des communes de Nouvelle-Calédonie" et les
+mots : "notamment les conditions dans lesquelles le représentant de l'Etat dans le département est chargé des pouvoirs
+mentionnés à cet article lorsque l'emprise de l'aérodrome s'étend sur plusieurs départements" sont supprimés.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code général des collectivités territoriales - art. L2212-2
-	  - Code des transports - art. L6332-2 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 9
+
+	**Liens**:
+
+	  - RECTIFICATION: Ordonnance n°2012-289 du 1er mars 2012 - art., v. init.
+
+	**Cite**:
+
+	  - Code des communes de la Nouvelle-Calédonie - art. L131-2 (V)
+	  - Code des transports - art. L6332-2 (V)
