--- a/01. PARTIE LEGISLATIVE/Article L6773-5 - 23077341.md
+++ b/01. PARTIE LEGISLATIVE/Article L6773-5 - 23077341.md
@@ -1,13 +1,22 @@
 # Article L6773-5
 
-Pour l'application en Polynésie française du premier alinéa de l'article L. 6341-2, les mots : " en application du règlement
-(CE) n° 300/2008 du Parlement européen et du Conseil du 11 mars 2008 relatif à l'instauration de règles communes dans le
-domaine de la sûreté de l'aviation civile et des règlements pris pour son application par la Commission européenne " sont
-remplacés par les mots : " en application des règles en vigueur en métropole en vertu du règlement (CE) n° 300/2008 du
+Pour l'application en Polynésie française des dispositions de l'article L. 6341-2 aux aérodromes ouverts au trafic commercial
+international, les mots : " de l'application du règlement (CE) n° 300/2008 du Parlement européen et du Conseil du 11 mars
+2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de l'aviation civile et des règlements pris
+pour son application par la Commission européenne " sont remplacés par les mots : " de l'application des règles en vigueur en
+métropole en vertu du règlement (CE) n° 300/2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de
+l'aviation civile et des règlements pris pour son application par la Commission européenne ". 
+
+Sur les aérodromes autres que ceux mentionnés à l'alinéa précédent, l'autorité administrative compétente peut prendre des
+mesures de sûreté prescrites en application des règles en vigueur en métropole en vertu du règlement (CE) n° 300/2008 du
 Parlement européen et du Conseil du 11 mars 2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de
-l'aviation civile et des règlements pris pour son application par la Commission européenne ".
+l'aviation civile et des règlements pris pour son application par la Commission européenne.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 10
 
 	**Cité par**:
 
@@ -15,8 +24,7 @@ l'aviation civile et des règlements pris pour son application par la Commission
 
 	**Cite**:
 
-	  - Code des transports - art. L6341-2 (V)
-	  - règlement (CE) n°300/2008
+	  - Code des transports - art. L6341-2
 
 	**Codifié par**:
 
