--- a/01. PARTIE LEGISLATIVE/Article L6773-7 - 23077337.md
+++ b/01. PARTIE LEGISLATIVE/Article L6773-7 - 23077337.md
@@ -1,14 +1,27 @@
 # Article L6773-7
 
-Pour l'application du deuxième alinéa de l'article L. 6342-2 en Polynésie française, les mots : " ou ressortissants d'un Etat
-membre de l'Union européenne " sont supprimés.
+I.-Pour l'application en Polynésie française des dispositions de l'article L. 6342-2, les mots : " un titre de circulation ou
+l'un des documents indiqués au point 1.2.2.2 de l'annexe du règlement (UE) n° 185/2010 fixant des mesures détaillées pour la
+mise en œuvre des normes de base communes dans le domaine de la sûreté de l'aviation civile " sont remplacés par les mots : "
+un document équivalent à ceux requis en métropole en vertu de l'application du point 1.2.2.2 de l'annexe du règlement (UE) n°
+185/2010 fixant des mesures détaillées pour la mise en œuvre des normes de base communes dans le domaine de la sûreté de
+l'aviation civile ". 
+
+II.-Pour l'application en Polynésie française des dispositions du II de l'article L. 6342-4, les mots : " ou ressortissant à
+un Etat membre de l'Union européenne " sont supprimés et les mots : " dans le département " sont remplacés par les mots : "
+en Polynésie française ".
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code des transports - art. L6342-2 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 10
+
+	**Cite**:
+
+	  - Code des transports - art. L6342-2
+	  - Code des transports - art. L6342-4
