--- a/01. PARTIE LEGISLATIVE/Article L6783-5 - 23077277.md
+++ b/01. PARTIE LEGISLATIVE/Article L6783-5 - 23077277.md
@@ -1,14 +1,21 @@
 # Article L6783-5
 
-Pour l'application à Wallis-et-Futuna de l'article L. 6332-2, les mots : " dans le département qui exerce, à cet effet, dans
-leur emprise, les pouvoirs impartis au maire par l'article L. 2212-2 du code général des collectivités territoriales " sont
-supprimés.
+Pour l'application à Wallis-et-Futuna de l'article L. 6332-2, les mots : " dans le département " sont remplacés par les
+mots : " à Wallis-et-Futuna ", les mots : " par l'article L. 2212-2 du code général des collectivités territoriales " sont
+remplacés par les mots : " en matière de police municipale à Wallis-et-Futuna " et les mots : " notamment les conditions dans
+lesquelles le représentant de l'Etat dans le département est chargé des pouvoirs mentionnés à cet article lorsque l'emprise
+de l'aérodrome s'étend sur plusieurs départements " sont supprimés.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 11
+
 	**Cite**:
 
-	  - Code des transports - art. L6332-2 (V)
+	  - Code général des collectivités territoriales - art. L2212-2
+	  - Code des transports - art. L6332-2
 
 	**Codifié par**:
 
