--- a/01. PARTIE LEGISLATIVE/Article L6783-6 - 23077273.md
+++ b/01. PARTIE LEGISLATIVE/Article L6783-6 - 23077273.md
@@ -1,13 +1,26 @@
 # Article L6783-6
 
-Pour l'application à Wallis-et-Futuna du premier alinéa de l'article L. 6341-2, les mots : " en application du règlement (CE)
-n° 300/2008 du Parlement européen et du Conseil du 11 mars 2008 relatif à l'instauration de règles communes dans le domaine
-de la sûreté de l'aviation civile et des règlements pris pour son application par la Commission européenne " sont remplacés
-par les mots : " en application des règles en vigueur en métropole en vertu du règlement (CE) n° 300/2008 du Parlement
-européen et du Conseil du 11 mars 2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de l'aviation
-civile et des règlements pris pour son application par la Commission européenne ".
+Pour l'application à Wallis-et-Futuna des dispositions de l'article L. 6341-2 aux aérodromes ouverts au trafic commercial
+international, les mots : " de l'application du règlement (CE) n° 300/2008 du Parlement européen et du Conseil du 11 mars
+2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de l'aviation civile et des règlements pris
+pour son application par la Commission européenne " sont remplacés par les mots : " de l'application des règles en vigueur en
+métropole en vertu du règlement (CE) n° 300/2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de
+l'aviation civile et des règlements pris pour son application par la Commission européenne ". 
+
+Sur les aérodromes autres que ceux mentionnés à l'alinéa précédent, l'autorité administrative compétente peut prendre des
+mesures de sûreté prescrites en application des règles en vigueur en métropole en vertu du règlement (CE) n° 300/2008 du
+Parlement européen et du Conseil du 11 mars 2008 relatif à l'instauration de règles communes dans le domaine de la sûreté de
+l'aviation civile et des règlements pris pour son application par la Commission européenne.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 11
 
 	**Cité par**:
 
@@ -15,9 +28,4 @@ civile et des règlements pris pour son application par la Commission européenn
 
 	**Cite**:
 
-	  - Code des transports - art. L6341-2 (V)
-	  - règlement (CE) n°300/2008
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des transports - art. L6341-2
