--- a/01. PARTIE LEGISLATIVE/Article L6783-7 - 23077271.md
+++ b/01. PARTIE LEGISLATIVE/Article L6783-7 - 23077271.md
@@ -1,13 +1,26 @@
 # Article L6783-7
 
-Pour l'application du deuxième alinéa de l'article L. 6342-2 à Wallis-et-Futuna, les mots : " ou ressortissants d'un Etat
-membre de l'Union européenne " sont supprimés.
+I.-Pour l'application à Wallis-et-Futuna des dispositions de l'article L. 6342-2, les mots : " un titre de circulation ou
+l'un des documents indiqués à l'article 1.2.2.2 de l'annexe du règlement (UE) n° 185/2010 fixant des mesures détaillées pour
+la mise en œuvre des normes de base communes dans le domaine de la sûreté de l'aviation civile " sont remplacés par les
+mots : " un document équivalent à ceux requis en métropole en vertu de l'application de l'article 1.2.2.2 de l'annexe au
+règlement (UE) n° 185/2010 fixant des mesures détaillées pour la mise en œuvre des normes de base communes dans le domaine de
+la sûreté de l'aviation civile ". 
+
+II.-Pour l'application à Wallis-et-Futuna des dispositions du II de l'article L. 6342-4, les mots : " ou ressortissant à un
+Etat membre de l'Union européenne " sont supprimés et les mots : " dans le département " sont remplacés par les mots : " à
+Wallis-et-Futuna ".
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 11
+
 	**Cite**:
 
-	  - Code des transports - art. L6342-2 (V)
+	  - Code des transports - art. L6342-2
+	  - Code des transports - art. L6342-4
 
 	**Codifié par**:
 
