--- a/01. PARTIE LEGISLATIVE/Article L1324-7 - 23085504.md
+++ b/01. PARTIE LEGISLATIVE/Article L1324-7 - 23085504.md
@@ -6,18 +6,30 @@ chef d'entreprise ou la personne désignée par lui de leur intention d'y partic
 déclarations individuelles ne peuvent être utilisées que pour l'organisation du service durant la grève. Elles sont couvertes
 par le secret professionnel. Leur utilisation à d'autres fins ou leur communication à toute personne autre que celles
 désignées par l'employeur comme étant chargées de l'organisation du service est passible des peines prévues à l'article
-226-13 du code pénal.
+226-13 du code pénal. 
+
+Le salarié qui a déclaré son intention de participer à la grève et qui renonce à y participer en informe son employeur au
+plus tard vingt-quatre heures avant l'heure prévue de sa participation à la grève afin que ce dernier puisse l'affecter dans
+le cadre du plan de transport. Cette information n'est pas requise lorsque la grève n'a pas lieu ou lorsque la prise du
+service est consécutive à la fin de la grève. 
+
+Le salarié qui participe à la grève et qui décide de reprendre son service en informe son employeur au plus tard vingt-quatre
+heures avant l'heure de sa reprise afin que ce dernier puisse l'affecter dans le cadre du plan de transport. Cette
+information n'est pas requise lorsque la reprise du service est consécutive à la fin de la grève. 
+
+Par dérogation au premier alinéa du présent article, les informations issues de ces déclarations individuelles peuvent être
+utilisées pour l'application de l'article L. 1324-8.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2007-1224 du 21 août 2007 - art. 5 (VT), alinéa 7, paragraphe II
+	  - Loi n°2012-375 du 19 mars 2012 - art. 5
 
 	**Cite**:
 
 	  - Code pénal - art. 226-13
-	  - Code des transports - art. L1222-7 (VD)
+	  - Code des transports - art. L1222-7
 
 	**Cité par**:
 
