--- a/01. PARTIE LEGISLATIVE/Article L1324-8 - 23085502.md
+++ b/01. PARTIE LEGISLATIVE/Article L1324-8 - 23085502.md
@@ -1,13 +1,15 @@
 # Article L1324-8
 
 Est passible d'une sanction disciplinaire le salarié qui n'a pas informé son employeur de son intention de participer à la
-grève dans les conditions prévues à l'article L. 1324-7.
+grève dans les conditions prévues à l'article L. 1324-7. Cette sanction disciplinaire peut également être prise à l'encontre
+du salarié qui, de façon répétée, n'a pas informé son employeur de son intention de renoncer à participer à la grève ou de
+reprendre son service.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2007-1224 du 21 août 2007 - art. 5 (VT), alinéa 8, paragraphe II
+	  - Loi n°2012-375 du 19 mars 2012 - art. 5
 
 	**Cité par**:
 
