--- a/02. PARTIE REGLEMENTAIRE/Article D1803-4 - 28997200.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1803-4 - 28997200.md
@@ -4,9 +4,8 @@ Pour l'attribution de l'aide prévue à l'article L. 1803-5, le lieu de formatio
 dans une collectivité mentionnée à l'article L. 1803-2 ou, dans le cadre d'un programme européen, dans un Etat membre de
 l'Union européenne ou un Etat partie à l'accord sur l'Espace économique européen. 
 
-Le montant de l'aide varie selon que l'étudiant bénéficie ou non d'une bourse sur critères sociaux mentionnée à l'article 1er
-du décret n° 2008-974 du 18 septembre 2008 relatif aux bourses et aides financières accordées aux étudiants relevant du
-ministère de l'enseignement supérieur. 
+Le montant de l'aide varie selon que l'étudiant bénéficie ou non d'une bourse sur critères sociaux mentionnée à l'article D.
+821-1 du code de l'éducation. 
 
 Pour l'application de l'article L. 1803-5, l'étudiant ou le lycéen qui, au moment de son départ pour son cursus scolaire ou
 universitaire dans une des destinations éligibles au passeport pour la mobilité des études, était résident habituel d'une
@@ -21,20 +20,12 @@ Aucune prise en charge ne peut être admise au-delà de l'année scolaire ou uni
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Décret n°2015-652 du 10 juin 2015 - art. 2 (V)
+
 	**Cite**:
 
-	  - Décret n°2008-974 du 18 septembre 2008 - art. 1 (V)
+	  - Code de l'éducation - art. D821-1 (V)
 	  - Code des transports - art. L1803-2 (V)
 	  - Code des transports - art. L1803-5 (V)
-
-	**Anciens textes**:
-
-	  - Décret n°2010-1424 du 18 novembre 2010 - art. 4 (V)
-
-	**Codifié par**:
-
-	  - Décret n°2014-530 du 22 mai 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-530 du 22 mai 2014 - art.
