--- a/01. PARTIE LEGISLATIVE/Article L3121-10 - 23083909.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-10 - 23083909.md
@@ -1,27 +1,33 @@
 # Article L3121-10
 
 L'exercice de l'activité de conducteur de taxi est subordonné à la délivrance d'une carte professionnelle par l'autorité
-administrative. Il est incompatible avec l'exercice de l'activité de conducteur de voiture de transport avec chauffeur.
+administrative.
+
+**Nota:**
+
+Dans sa décision n° 2015-516 QPC du 15 janvier 2016 (NOR : CSCX1601442S), le Conseil constitutionnel a déclaré la seconde
+phrase de l'article L. 3121-10 du code des transports contraire à la Constitution. La déclaration d'inconstitutionnalité
+prend effet à compter de la publication de la présente décision, dans les conditions fixées par son considérant 9.
 
 **Liens relatifs à cet article**
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cite**:
 
 	  - Loi n°2014-1104 du 1er octobre 2014 - art. 6
-	  - Code des transports - art. L3121-3
+	  - Code des transports - art. L3121-3 (V)
 
 	**Modifié par**:
 
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 7
+	  - Décision n°2015-516 QPC du 15 janvier 2016 - art. 1, v. init.
 
 	**Cité par**:
 
 	  - Arrêté du 19 janvier 2016 - art. 1 (V)
-	  - Code des transports - art. L3121-5 (M)
+	  - Code des transports - art. L3121-5 (V)
 	  - Code des transports - art. R3121-13 (V)
 	  - Code des transports - art. R3121-16 (M)
 	  - Code des transports - art. R3121-17 (V)
+
+	**Abrogé par**:
+
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 9 (V)
